--- a/data/sources/gcdc-prague.yaml
+++ b/data/sources/gcdc-prague.yaml
@@ -6,75 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/d/f/b/5/600_471357269.jpeg
   events:
   - meetupcom:
-      meta_description: '[Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkých prezentací a příkladů zkušenosti s Google Workspace, Google Cloud Platform či Chrome Enterprise zařízeními.
-        Kratší témata a více řečníků přinesou rozmanitost názorů a online forma umožní zapojení ať jste v kanclu, doma nebo na chatě.
-
-
-        Kdy?
-
-        =====
-
-        📅 19.5.2020
-
-        ⏰ 18:30
-
-        🌍 online Google Meet (odkaz je v události Meetupu)
-
-
-        Téma
-
-        ======
-
-        Nosným tématem je tentokrát Jak začít s GCP.
-
-
-        Program (řečnící jsou známí, ale detail některých vstupů bude ještě upřesněn)
-
-        =========
-
-        18:30 start
-
-
-        Přednášky (60min)
-
-
-        1. Jak začít se správou GCP ve firmě, Ivan Kutil AppSatori
-
-
-        Možná jste si už vyzkoušeli Google Cloud a povedlo se vám úspěšně zprovoznit některé služby, ale měli jste čas se zamyslet jak správně nastavit z pohledu firemní organizace a její pravidel? Cílem je ukázat jak na centrální správu GCP Projektů,
-        jak na jejich organizaci do složek, tak aby bylo snadno vše přehledne a rozšiřitelné
-
-
-        2. Jak začít s Google Cloud SDK a Google Cloud Shell, Igor Ekishev AppSatori
-
-
-        Seznámíme se se základním způsobem práce s GCP nástrojem - Google Cloud SDK a jeho command-line rozhraním. Ukážeme si jak s ním začít pracovat, základní příkazy a několik vychytávek.
-
-        Podíváme se na Google Cloud Shell - online terminál a šikovné vývojářské prostředí.
-
-
-        3. Správa vaší organizace pomocí Terraform, Peter Malina Flowup
-
-
-        Práce v UI v GCP bývá bezproblémová. Čím vice se však organizace rozšiřuje, tím obtížnější může být její správa. Dříve či později nás to dožene a svou pozornost zaměříme např. na kontrolu přístupu. V této přednášce nám Peter ukáže jak položit základy
-        správy vaší organizace a projektů v centralizovaném, auditovaném a bezpečně automatizovaném Git repository.
-
-
-        19:45 networking a after(call)party
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.'
-      og_title: Cloud Talks vol.7 {Jak začít s GCP}, Wed, May 19, 4:30 PM | Meetup
+      meta_description: 'Wed, May 19, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme přílež'
+      og_title: Cloud Talks vol.7 {Jak začít s GCP}
       image: https://secure.meetupstatic.com/photos/event/7/6/7/0/600_495210320.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/276944440/
       ical:
@@ -98,78 +31,8 @@ series:
         dtstart: 2021-05-19 18:30:00+02:00
         dtend: 2021-05-19 20:00:00+02:00
   - meetupcom:
-      meta_description: '[Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkých prezentací a příkladů zkušenosti s Google Workspace, Google Cloud Platform či Chrome Enterprise zařízeními.
-        Kratší témata a více řečníků přinesou rozmanitost názorů a online forma umožní zapojení ať jste v kanclu, doma nebo na chatě.
-
-
-        Kdy?
-
-        =====
-
-        📅 3.3.2020
-
-        ⏰ 18:30
-
-        🌍 online Google Meet (odkaz je v události Meetupu)
-
-
-        Téma
-
-        ======
-
-        Nosným tématem je tentokrát K8s.
-
-
-        Program na tuto událost je už kompletní. Ale jestli máte své téma, o které se chcete podělit, přihlašte se pro jedno z příštích běhů. Délku necháme na vás, ale pro větší pestrost témat by neměla přednáška překračovat 15 - 20 min. Můžete mít slajdy
-        nebo rovnou sdílet obrazovku s ukázkou.
-
-        Z přihlášených témat poté sestavíme program a vybereme řečníky tak, aby témata na sebe navazovala.
-
-
-        Přihlašte své téma na zde (Call-for-paper)
-
-        https://forms.gle/bqk6trG7MYR8RSqh6
-
-
-        Program (řečnící jsou známí, ale detail některých vstupů bude ještě upřesněn)
-
-        =========
-
-        18:30 start
-
-
-        Přednášky (60 min)
-
-        1. Terraform everything - David Kubec, Jan Sasínek, terap.io
-
-
-        Správa infrastruktury Terap.io pomocí nástroje Terraform. Stack obsahující Kubernetes, GCP SQL, Secret Manager, hromady pomocných nástrojů a vlastních servic - vše managované jediným nástrojem - včetně deploymentu do dynamického množství prostředí.
-        Přesto je pár věcí, které se nám zautomatizovat tímto způsobem nepodařilo (napr. Google OAuth tokeny) a i na to muže přijít řeč.
-
-
-        2. Ondřej Šika, freelancer, DevOps architekt, konzultant, lektor
-
-
-        Rychlý setup Kubernetes clusteru pomocí RKE
-
-        Skaffold, vývoj přímo v Kubernetes clusteru
-
-
-        19:45 networking a after(call)party
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.'
-      og_title: Cloud Talks vol.6 {Kubernetes}, Wed, Mar 3, 5:30 PM | Meetup
+      meta_description: 'Wed, Mar 3, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání'
+      og_title: Cloud Talks vol.6 {Kubernetes}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/274666372/
       ical:
@@ -193,83 +56,8 @@ series:
         dtstart: 2021-03-03 18:30:00+01:00
         dtend: 2021-03-03 20:00:00+01:00
   - meetupcom:
-      meta_description: '[Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkých prezentací a příkladů zkušenosti s G Suite, Google Cloud Platform či Chrome Enterprise zařízeními. Kratší
-        témata a více řečníků přinesou rozmanitost názorů a online forma umožní zapojení ať jste v kanclu, doma nebo na chatě.
-
-
-        Kdy
-
-        =====
-
-        Start 11.11.2020 v 18:30 přes online Google Meet (odkaz je v události Meetupu)
-
-
-        Téma
-
-        ======
-
-        Nosným tématem listopadových Cloud talks je tentokrát Serverless Computing.
-
-
-        Program na tuto událost je už kompletní. Ale jestli máte své téma, o které se chcete podělit, přihlašte se pro jedno z příštích běhů. Délku necháme na vás, ale pro větší pestrost témat by neměla přednáška překračovat 15 - 20 min. Můžete mít slajdy
-        nebo rovnou sdílet obrazovku s ukázkou.
-
-        Z přihlášených témat poté sestavíme program a vybereme řečníky tak, aby témata na sebe navazovala.
-
-
-        Přihlašte své téma na zde
-
-        https://forms.gle/bqk6trG7MYR8RSqh6
-
-
-        Program
-
-        =========
-
-        18:30 start
-
-
-        Přednášky (75 min)
-
-        1. Simple serverless pipelines on GCP. (Zdenko Hrček, gcpweekly)
-
-
-        Na praktických příkladech nám Zdenko ukáže jak můžeme pomocí serverless GCP produktů vytvořit workflow pro zpracování dat a nemuseli se starat o infrastrukturu.
-
-
-        2. Intro do dataflow. (Jiří Štěpán, Etnetera)
-
-
-        Jirka představí Apache Beam (platform agnostic popis datových transformací). Jednoduchý HelloWorld postupně zkomplikuje a posléze spustí na Google Dataflow, což je jeden z možných runnerů. To, že v celém procesu nebude jediný server je asi tak
-        jasné.
-
-
-        3. Cloud Run
-
-
-        Intro do Cloud Run. (Tomáš Papež, ACTUM Digital)
-
-        Cloud Run - working Demo (Peter Malina, Flowup)
-
-
-        Tomáš i Peter jsou velkými nadšenci do Cloud Runu. Tomáš ve své části pokryje teorii o tom co Cloud Run je, jeho evoluci v čase. Zaměří se na novinky, které byly představené na Google Cloud NEXT 20. Jeho cílem bude pokrýt většinu zásadních features
-        a ukázat, že Cloud Run již je production ready serverless platforma se širokou škálou využití.
-
-        Peter svou přednáškou naváže na Tomáše, uvidíte live demo této platformy.
-
-
-        19:45 networking a after(call)party
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.'
-      og_title: Cloud Talks vol.5 {Serverless Computing}, Wed, Nov 11, 5:30 PM | Meetup
+      meta_description: 'Wed, Nov 11, 2020, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příle'
+      og_title: Cloud Talks vol.5 {Serverless Computing}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/273622225/
       ical:
@@ -293,82 +81,8 @@ series:
         dtstart: 2020-11-11 18:30:00+01:00
         dtend: 2020-11-11 20:00:00+01:00
   - meetupcom:
-      meta_description: '[Pojďme se potkat online a nasdílet zkušenosti o práci s daty]
-
-
-        Proč?
-
-        ======
-
-        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkých prezentací a příkladů zkušenosti s G Suite, Google Cloud Platform či Chrome Enterprise zařízeními. Kratší
-        témata a více řečníků přinesou rozmanitost názorů a online forma umožní zapojení ať jste v kanclu, doma nebo na chatě.
-
-
-        Kdy
-
-        =====
-
-        Start 7.10.2020 v 18:30 přes online Google Meet (odkaz je v události Meetupu)
-
-
-        Téma
-
-        ======
-
-        Od 14 července odstartovalo 9 týdnů nabitých informací v rámci Google Cloud Next 2020 OnAir. S Cloud talks se připojujeme také, tentokrát tématem zaměřeným na práci s daty. Ať už jde o datovou analytiku, o správu dat, nebo databáze.
-
-
-        Program na tuto událost je už kompletní. Ale jestli máte své téma, o které se chcete podělit, přihlašte se pro jedno z příštích běhů. Délku necháme na vás, ale pro větší pestrost témat by neměla přednáška překračovat 15 - 20 min. Můžete mít slajdy
-        nebo rovnou sdílet obrazovku s ukázkou.
-
-        Z přihlášených témat poté sestavíme program a vybereme řečníky tak, aby témata na sebe navazovala.
-
-
-        Přihlašte své téma na zde
-
-        https://forms.gle/bqk6trG7MYR8RSqh6
-
-
-        Program
-
-        =========
-
-        18:30 start
-
-
-        1. Datawarehouse nad BigQuery aneb jak jsme opustili MySQL. (Antonín Kučera a Zdeněk Hejnák, Livesport - 15 min)
-
-
-        Tony a Zdeněk nám ukážou, co obnáší mít DWH nad BigQuery, kde mají data z 50+ projektů, jaké nástroje k tomu využívají a s čím se perou.
-
-
-        2. Jak změřit cokoliv. (Hana Kalivodová - 20 min)
-
-
-        Hanka nám představení metodologie z knihy How To Measure Anything. Spousta teorie a malá ukázka ve spreadsheetech a DataStudiu dosavadní aplikace této zajímavosti pro Open Society Fund.
-
-        Kdo Hanku nezná, je bývalý Data Team Lead z Etnetery Activate, nyní na volné noze (na pár měsíců full-time vytížená EpidemicForecasting(em).com + fušuje do pomáhání neziskovkám).
-
-
-        3. Jak vyhodnocovat změnu / kampaně. (Adam Šilhan, igloonet - 15 min)
-
-
-        Zvlášť v marketingu většinou nemůžeme dělat experimenty "ceteris paribus" - vliv má sezóna, další aktivity, které ve stejnou dobu dělají další oddělení, nebo konkurence. Jak tedy změny a kampaně vyhodnocovat?
-
-        CausalImpact není silver bullet, ale výrazně nám s tím může pomoci. Příklady, kdy a jak jsme s ním pracovali, na co se hodí a na co si dát pozor.
-
-
-        4. Jak si postavit vlastní ETL na GCP. (Eva Hankusová a Tomáš Votava, BizzTreat.com - 15 min)
-
-
-        ETL - extract - transform - load - proces patřící do základů práce s daty. Existuje postup, jak si ETL postavit přímo na cloudu GCP a využívat tak všech jeho výhod. Co je součástí takového řešení a jak to celé funguje?
-
-
-        19:45 networking a after(call)party
-
-
-        Digitální transformace probíhá napříč obory. Pojďte s námi zkusit novou formou online sdílení.'
-      og_title: Cloud Talks vol.4 {Data}, Wed, Oct 7, 4:30 PM | Meetup
+      meta_description: 'Wed, Oct 7, 2020, 6:30 PM: [Pojďme se potkat online a nasdílet zkušenosti o práci s daty]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tém'
+      og_title: Cloud Talks vol.4 {Data}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/272110257/
       ical:
