--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -6,75 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/8/2/b/3/600_459753459.jpeg
   events:
   - meetupcom:
-      meta_description: 'PLEASE RSVP USING THE LINK BELOW
-
-
-        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/
-
-
-        DevFest.cz je každoročně pořádaný event pro všechny vývojáře a nadšence do technologií. V rámci jednoho dne máte možnost si poslechnout řečníky nejen z Česka, ale celého světa a užít si jedinečnou atmosféru, kterou vám přináší spojení dvou tech
-        komunit - GUG.CZ a Techmeetup Ostrava. Tentokrát v hybridní formě!
-
-
-        Agenda
-
-
-        ---
-
-
-        Hosted By
-
-
-        Filip Goszler, GDG Organizer
-
-
-        Hi. I''m Filip. I love communities, my family and new tech 🤳🏻 Since 2016, I''ve been taking care of GUG.cz (Google User Group), an NGO that covers all the GDG, GBG, GEG and GXG chapters in our country,
-
-        I''m a Google Certified Trainer for Google Workspace.
-
-
-        Katka Pejšková, GDG Organizer
-
-
-        I''m an explorer!
-
-        Love for makeup, fresh bread, chocolate, books, community, and my little dog Archie.
-
-
-        - Moderator @ Community Leads Platform
-
-        - Security & Happiness @ TietoEvry
-
-        - GDG & WTM Ambassador @ GDG Ostrava
-
-        - PR & Marketing lead @ DevFest.cz
-
-        - Amateur blogger @ Lipstickitout blog
-
-
-        Dominik Šimoník, GDG Organizer
-
-
-        Denis V., GDG Organizer
-
-
-        Lukáš Kaleta, GDG Organizer
-
-
-        Jakub Ševčík, GDG Organizer
-
-
-        Zdeněk Klus, Organizer
-
-
-        ---
-
-
-        PLEASE RSVP USING THE LINK BELOW
-
-
-        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/'
-      og_title: DevFest.cz 2021 powered by TechMeetup, Fri, Nov 26, 8:00 AM | Meetup
+      meta_description: 'Fri, Nov 26, 2021, 9:00 AM: PLEASE RSVP USING THE LINK BELOWhttps://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/DevFest.cz je každoročně pořádaný '
+      og_title: DevFest.cz 2021 powered by TechMeetup
       image: https://secure.meetupstatic.com/photos/event/8/2/b/3/600_459753459.jpeg
       url: https://www.meetup.com/GDG-Ostrava/events/281546792/
       ical:
@@ -98,110 +31,8 @@ series:
         dtstart: 2021-11-26 09:00:00+01:00
         dtend: 2021-11-26 21:00:00+01:00
   - meetupcom:
-      meta_description: 'THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
-
-
-        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecurity-with-zdenek-klus-ii-czech/
-
-
-        Chcete se dozvědět víc o kybernetické bezpečnosti a nevíte, kde začít? Motají vám hlavu různé pojmy a termíny? Po obrovské vlně zájmu po akci Mezinárodní TýDen Žen tu máme opakování a pokračování Zdeňkovy přednášky o kyberbezpečnosti pro začátečníky!
-
-
-        Na co se můžete těšit?
-
-
-        26. 5. v 18h-19h – Kybezbezpečnostní Teorie Klusem
-
-
-        Nestihli jste stream? Tady je záznam: [https://www.youtube.com/watch?v=4VNUGxm9CG4](https://www.youtube.com/watch?v=4VNUGxm9CG4)
-
-
-        2. 6. v 18h-19:30h - Kyberbezpečnostní praxe Klusem
-
-
-        - ukážeme si praktické příklady, jak probíhají kyberútoky
-
-
-        - dozvíte se, jak takový útok rozpoznat a jak rychle reagovat
-
-
-        - podíváme se detailněji na některé způsoby ochrany a prevence
-
-
-        Zapněte si upozornění na Youtube stream ZDE: [https://www.youtube.com/watch?v=NMkWJC0eCWI](https://www.youtube.com/watch?v=NMkWJC0eCWI)
-
-
-        Agenda
-
-
-        ---
-
-
-        Speaker
-
-
-        Zdeněk Klus - TietoEVRY
-
-
-        Moderator
-
-
-        Katka Pejšková - GUG.cz (Co-organizer)
-
-
-        Hosted By
-
-
-        Filip Goszler, GDG Organizer
-
-
-        Hi. I''m Filip. I love communities, my family and new tech 🤳🏻 Since 2016, I''ve been taking care of GUG.cz (Google User Group), an NGO that covers all the GDG, GBG, GEG and GXG chapters in our country,
-
-        I''m a Google Certified Trainer for Google Workspace.
-
-
-        Katka Pejšková, GDG Organizer
-
-
-        I''m an explorer!
-
-        Love for makeup, fresh bread, chocolate, books, community, and my little dog Archie.
-
-
-        - Moderator @ Community Leads Platform
-
-        - Security & Happiness @ TietoEvry
-
-        - GDG & WTM Ambassador @ GDG Ostrava
-
-        - PR & Marketing lead @ DevFest.cz
-
-        - Amateur blogger @ Lipstickitout blog
-
-
-        Dominik Šimoník, GDG Organizer
-
-
-        Denis V., GDG Organizer
-
-
-        Lukáš Kaleta, GDG Organizer
-
-
-        Jakub Ševčík, GDG Organizer
-
-
-        Zdeněk Klus, Organizer
-
-
-        ---
-
-
-        THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
-
-
-        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecurity-with-zdenek-klus-ii-czech/'
-      og_title: Cybersecurity with Zdenek Klus II [Czech], Wed, Jun 2, 4:00 PM | Meetup
+      meta_description: 'Wed, Jun 2, 2021, 6:00 PM: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOWhttps://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecurity-with-zdenek-klus-ii-czech/'
+      og_title: Cybersecurity with Zdenek Klus II [Czech]
       image: https://secure.meetupstatic.com/photos/event/8/2/b/3/600_459753459.jpeg
       url: https://www.meetup.com/GDG-Ostrava/events/278023608/
       ical:
