--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -56,21 +56,8 @@ series:
         dtstart: 2021-09-27 18:30:00+02:00
         dtend: 2021-09-27 20:30:00+02:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://meet.google.com/zzn-enqh-vnn
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-
-        GDG Garage is a hands-on, hyperlocal & regular developer meeting.'
-      og_title: GDG Garage Prague One, Mon, Oct 11, 4:30 PM | Meetup
+      meta_description: 'Mon, Oct 11, 2021, 6:30 PM: • How to join?Online only because of covid https://meet.google.com/zzn-enqh-vnn• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/'
+      og_title: GDG Garage Prague One, Mon, Oct 11, 2021, 6:30 PM
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/drxpmsyccnbpb/
       ical:
@@ -194,21 +181,8 @@ series:
         dtstart: 2021-11-22 18:30:00+01:00
         dtend: 2021-11-22 20:30:00+01:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-
-        GDG Garage is a hands-on, hyperlocal & regular developer meeting.'
-      og_title: GDG Garage Prague One, Mon, Oct 25, 4:30 PM | Meetup
+      meta_description: 'Mon, Oct 25, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
+      og_title: GDG Garage Prague One, Mon, Oct 25, 2021, 6:30 PM
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccnbhc/
       ical:
@@ -232,21 +206,8 @@ series:
         dtstart: 2021-10-25 18:30:00+02:00
         dtend: 2021-10-25 20:30:00+02:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-
-        GDG Garage is a hands-on, hyperlocal & regular developer meeting.'
-      og_title: GDG Garage Prague One, Mon, Nov 8, 5:30 PM | Meetup
+      meta_description: 'Mon, Nov 8, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
+      og_title: GDG Garage Prague One, Mon, Nov 8, 2021, 6:30 PM
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccpblb/
       ical:
@@ -270,21 +231,8 @@ series:
         dtstart: 2021-11-08 18:30:00+01:00
         dtend: 2021-11-08 20:30:00+01:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-
-        GDG Garage is a hands-on, hyperlocal & regular developer meeting.'
-      og_title: GDG Garage Prague One, Mon, Nov 22, 5:30 PM | Meetup
+      meta_description: 'Mon, Nov 22, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
+      og_title: GDG Garage Prague One, Mon, Nov 22, 2021, 6:30 PM
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccpbdc/
       ical:
@@ -308,21 +256,8 @@ series:
         dtstart: 2021-11-22 18:30:00+01:00
         dtend: 2021-11-22 20:30:00+01:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-
-        GDG Garage is a hands-on, hyperlocal & regular developer meeting.'
-      og_title: GDG Garage Prague One, Mon, Dec 6, 5:30 PM | Meetup
+      meta_description: 'Mon, Dec 6, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
+      og_title: GDG Garage Prague One, Mon, Dec 6, 2021, 6:30 PM
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccqbjb/
       ical:
