--- a/data/sources/hackprague.yaml
+++ b/data/sources/hackprague.yaml
@@ -6,74 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/7/8/5/2/600_486990802.jpeg
   events:
   - meetupcom:
-      meta_description: 'This year HackPrague hackathon will ”Focus on the past to anticipate the future” 😎 There is no specific theme this year, but you can expect many interesting challenges from our sponsors and partners 💪
-
-
-        Where: Prague
-
-        When: October, 16 - 17, 2021
-
-        -----------------------------------------------------------------
-
-        What is a hackathon and why should I participate?
-
-
-        We think of our hackathon as an "invention marathons" where participants have no restraints. Unlike other events, we don’t want you to come up with a startup MVP or a solution to a corporate problem. Unleash your creativity and technical skills!
-        ❤️‍🔥
-
-
-        There are several reasons why you should join a hackathon:
-
-        ✅ free food and snacks for the whole weekend
-
-        ✅ get to know a lot of new like-minded people and expand your network
-
-        ✅ extend your skillset and learn a lot of new things while having fun
-
-        ✅ add it to your CV and present this experience to your potential employer
-
-
-        REGISTRATION: https://form.typeform.com/to/pga3h56k
-
-
-        Why are we organizing this?
-
-
-        We feel that Prague and the Central European region have a tremendous creative potential that hasn’t yet been realized. Our mission is to become a platform for passionate technologists to meet, collaborate, and form relationships that extend well
-        beyond the hackathon.
-
-
-        There is always something extra 🔥
-
-        ✅ For a weekend of innovation and fun with 150 coolest technologists
-
-        ✅ Interaction with the top European and American companies
-
-        ✅ Workshops and talks by experienced professionals
-
-        ✅ Free food and swag
-
-        ✅ Prize money
-
-
-        What are the prizes?
-
-        🥇 Grand prize: ~50 000 CZK
-
-        🥈 2nd place prize: ~30 000 CZK
-
-        🥉 3rd place prize: ~10 000 CZK
-
-        … and many other sponsored prizes.
-
-
-        Who can come?
-
-        HackPrague applications are open to all developers and designers, including students and full-time employees. We will select participants based on their past projects, experience, and enthusiasm. We will aim to admit a diverse pool of people.
-
-
-        REGISTRATION: https://form.typeform.com/to/pga3h56k'
-      og_title: HackPrague 2021 hackathon, Sat, Oct 16, 6:30 AM | Meetup
+      meta_description: 'Sat, Oct 16, 2021, 8:30 AM: This year HackPrague hackathon will ”Focus on the past to anticipate the future” 😎 There is no specific theme this year, but you can expect many interesting challenges fro'
+      og_title: HackPrague 2021 hackathon
       image: https://secure.meetupstatic.com/photos/event/b/a/8/a/600_498347754.jpeg
       url: https://www.meetup.com/HackPrague/events/280291985/
       ical:
@@ -97,68 +31,8 @@ series:
         dtstart: 2021-10-16 08:30:00+02:00
         dtend: 2021-10-17 18:30:00+02:00
   - meetupcom:
-      meta_description: 'Last year we were building hacks to improve the life in cities with the motto “the future is already here, it’s up to us to distribute it equally”. This year we will focus on the financial sector.
-
-
-        Nowadays, there are a lot of financial instruments and ready to use tools which are waiting to be connected into a meaningful application for customers.
-
-        We also got more and more financial data available which can give us an interesting insight into the financial behaviour of people. Based on this insight we can, for example, educate people about their bad spending habits and help them make their
-        spending more "healthy".
-
-        In some parts of the world, the importance of blockchain is growing steadily as it helps people to save the value of their hyperinflated money. And again there are many tools waiting to be developed to work with crypto instead of money.
-
-        What should be the new standard of banking and financial services?
-
-
-        Registration here: https://hackprague.com/hackprague-2020-registration
-
-
-        Check out the website at https://hackprague.com/hackathon2020 for more info and see you in Prague on 31. October - 1. November 2020!
-
-
-        Any questions? Send an email to team@hackprague.com.
-
-        -----------------------------------------------------------------
-
-
-        Check out photos from HackPrague 2019: https://photos.app.goo.gl/8jVqkX4gFSWuRADw5
-
-
-        Why are we organizing this?
-
-        -We feel that Prague and the Central European region have a tremendous creative potential that hasn’t yet been realized. Our mission is to become a platform for passionate technologists to meet, collaborate, and form relationships that extend well
-        beyond the hackathon.
-
-
-        Why should you come?
-
-        - For a weekend of innovation and fun with 150 coolest technologists
-
-        - Interaction with the top European and American companies
-
-        - Workshops and talks by experienced professionals
-
-        - Free food and swag
-
-        - Prize money
-
-
-        What are the prizes?
-
-        Grand prize: 50 000 CZK
-
-        2nd place prize: 30 000 CZK
-
-        3rd place prize: 10 000 CZK
-
-
-        … and many other sponsored prizes
-
-
-        Who can come?
-
-        HackPrague applications are open to all developers and designers, including students and full-time employees. We will select participants based on their past projects, experience, and enthusiasm. We will aim to admit a diverse pool of people.'
-      og_title: HackPrague 2020, Sat, Oct 31, 6:00 AM | Meetup
+      meta_description: 'Sat, Oct 31, 2020, 7:00 AM: Last year we were building hacks to improve the life in cities with the motto “the future is already here, it’s up to us to distribute it equally”. This year we will focus '
+      og_title: HackPrague 2020
       image: https://secure.meetupstatic.com/photos/event/8/a/8/1/600_492455457.jpeg
       url: https://www.meetup.com/HackPrague/events/272694585/
       ical:
@@ -182,28 +56,8 @@ series:
         dtstart: 2020-10-31 07:00:00+01:00
         dtend: 2020-11-01 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Free event in 🇨🇿 Czech language.
-
-
-        Jak umělá inteligence detekuje nádory na mozku? Lze číst myšlenky pomocí elektroencefalogramu? Podívejte se s námi na propojení nejnovějších modelů strojového učení a medicíny na praktických příkladech. Informatika se dá v propojení s medicínou
-        studovat v různých formách. Jak to vypadá?
-
-
-        Stručný obsah:
-
-        -Strojové učení (ML) a aplikace v medicíně
-
-        -Data ve zdravotnictví a nástroje na práci s nima
-
-        -Jak taková aplikace vypadá v praxi?
-
-        -Možnosti studia v ČR a na internetu
-
-
-        Registrace zdarma zde:
-
-        https://hackprague.typeform.com/to/LClHTfse'
-      og_title: Umělá inteligence v medicíně — ukázky a možnosti studia, Sat, Oct 10, 1:00 PM | Meetup
+      meta_description: 'Sat, Oct 10, 2020, 3:00 PM: Free event in 🇨🇿 Czech language.Jak umělá inteligence detekuje nádory na mozku? Lze číst myšlenky pomocí elektroencefalogramu? Podívejte se s námi na propojení nejnovější'
+      og_title: Umělá inteligence v medicíně — ukázky a možnosti studia
       image: https://secure.meetupstatic.com/photos/event/8/a/3/8/600_492455384.jpeg
       url: https://www.meetup.com/HackPrague/events/268734656/
       ical:
@@ -227,73 +81,8 @@ series:
         dtstart: 2020-10-10 15:00:00+02:00
         dtend: 2020-10-10 16:30:00+02:00
   - meetupcom:
-      meta_description: 'This event will be in Czech language and free registration on Eventbrite is required.
-
-
-        LÍSTKY
-
-        www.bit.ly/DSNIII
-
-
-        POPIS
-
-        Od technologie (T) až po business case (B). Přijďte si poslechnout zajímavé přednášky o zpracovávání dat od zástupců z několika technologických firem. Nahlédnete do střev technologie, dozvíte se o potenciálu monetizace v praxi a budete součástí
-        diskuzního panelu, kde se budete moci ptát na jakékoliv otázky.
-
-
-        Jedná se o třetí a POSLEDNÍ část událostní trilogie "Data Science Nights", která svými přednáškami pokrývá celý proces od sbírání dat až po analýzu a interpretaci.
-
-
-        Událost se bude opět konat v galerii Czech Photo Centre, 100 metrů od stanice metra Nové Butovice.
-
-
-        PROGRAM
-
-
-        18:00
-
-        Příchod, networking
-
-
-        18:30
-
-        Oficiální zahájení akce
-
-
-        18:40
-
-        Představení technologie + osvědčené postupy (Flat Zone)
-
-
-        19:10
-
-        Představení nástroje (GoodData)
-
-
-        19:40
-
-        Case study (GoodData)
-
-
-        19:55
-
-        Data Masters Incubator
-
-
-        20:10
-
-        Diskuzní panel + Q&A
-
-
-        20:40
-
-        Pizza, pivo, networking
-
-
-        22:00
-
-        Konec akce'
-      og_title: 'Data Science Nights III: Data analysis from T to B, Thu, Feb 20, 5:00 PM | Meetup'
+      meta_description: 'Thu, Feb 20, 2020, 6:00 PM: This event will be in Czech language and free registration on Eventbrite is required.LÍSTKYwww.bit.ly/DSNIIIPOPISOd technologie (T) až po business case (B). Přijďte si posl'
+      og_title: 'Data Science Nights III: Data analysis from T to B'
       image: https://secure.meetupstatic.com/photos/event/7/8/5/2/600_486990802.jpeg
       url: https://www.meetup.com/HackPrague/events/268320840/
       ical:
