--- a/data/sources/czech-testers.yaml
+++ b/data/sources/czech-testers.yaml
@@ -6,51 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/a/3/2/600_486662610.jpeg
   events:
   - meetupcom:
-      meta_description: 'Ahoj testeři,
-
-        další Testerská Katovna již tuto sobotu od 20h.
-
-
-        🚀 Katovna probíhá na Discordu > Katovna > STAGE
-
-
-        🚀 Odkaz na discord audio: https://discord.gg/ccAwX2rwXj
-
-
-        🚀 Přijď se poradit, vyměnit zkušenosti, pobrečet si jak je vše špatné, nebo se naopak pochlubit na tom na čem děláš a jak je to super - nebo hledáš někoho do týmu?
-
-
-        🚀 Katovna se nenahrává, takže co se tam řekne tam i zůstane 👍
-
-
-        -----------------
-
-
-        Témata najdeš na našem discordu v "❔témata" channelu a i ty můžeš přihodit téma, které chceš rozebrat: https://discord.gg/ccAwX2rwXj
-
-
-        -----------------
-
-
-        Chcete se zapojit do české testerské scény TEST STACK a nevíte jak? Připojte se na náš slack 😉
-
-        http://bit.ly/test-stack
-
-
-        Záznamy všech livestreamů
-
-        https://www.youtube.com/c/teststack
-
-
-        Plné verze záznamů rozhovorů včetně prémiového obsahu pro testery ❤️
-
-        https://www.patreon.com/teststack
-
-
-        Twitter
-
-        https://twitter.com/TEST_STACK_CZ'
-      og_title: Testerská Katovna, Sat, Aug 28, 6:00 PM | Meetup
+      meta_description: 'Sat, Aug 28, 2021, 8:00 PM: Ahoj testeři,další Testerská Katovna již tuto sobotu od 20h.🚀 Katovna probíhá na Discordu > Katovna > STAGE🚀 Odkaz na discord audio: https://discord.gg/ccAwX2rwXj🚀 Přijď'
+      og_title: Testerská Katovna
       image: https://secure.meetupstatic.com/photos/event/d/f/e/3/600_495237315.jpeg
       url: https://www.meetup.com/ProfessionalTesting/events/280378855/
       ical:
@@ -74,34 +31,8 @@ series:
         dtstart: 2021-08-28 20:00:00+02:00
         dtend: 2021-08-28 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Fedor je dnes DevOps Architekt ve Slovenské spořitelně a tvoří platformy, které umožňují automatizovat build-deploy-test a provozovat microservices. Svou kariéru začal jako Java developer a po pár letech přesedlal na performance
-        testy a ladění výkonu v bankovním prostředí, kde vybudoval perf stack včetně týmu.
-
-
-        Fedor Pavkovček ( DevOps Architekt )
-
-        Linkedin: https://www.linkedin.com/in/fedor-pavkovcek/
-
-
-        ===========
-
-
-        Nastavit odběr a připomenutí
-
-        http://bit.ly/teststacksub
-
-
-        DISCORD: https://bit.ly/tt-discord
-
-        PATREON: https://www.patreon.com/teststack​
-
-        FACEBOOK: http://bit.ly/teststack-facebook​
-
-        TWITTER: https://twitter.com/TEST_STACK_CZ
-
-
-        #devops #testing #testAutomation #performanceTesting #livestream'
-      og_title: 'Fedor Pavkovček: Performance testing je tak trochu alchymie, Fri, May 21, 11:00 AM | Meetup'
+      meta_description: 'Fri, May 21, 2021, 1:00 PM: Fedor je dnes DevOps Architekt ve Slovenské spořitelně a tvoří platformy, které umožňují automatizovat build-deploy-test a provozovat microservices. Svou kariéru začal jako'
+      og_title: 'Fedor Pavkovček: Performance testing je tak trochu alchymie'
       image: https://secure.meetupstatic.com/photos/event/8/1/4/600_496382068.jpeg
       url: https://www.meetup.com/ProfessionalTesting/events/278273942/
       ical:
@@ -125,30 +56,8 @@ series:
         dtstart: 2021-05-21 13:00:00+02:00
         dtend: 2021-05-21 15:00:00+02:00
   - meetupcom:
-      meta_description: 'Nový spolumoderátor a nový formát, přijďte na premiéru :)
-
-
-        ===========
-
-
-        Nastavit odběr a připomenutí
-
-        http://bit.ly/teststacksub
-
-
-        DISCORD: https://bit.ly/tt-discord
-
-        PATREON: https://www.patreon.com/teststack​
-
-        MEETUP: https://www.meetup.com/ProfessionalTe...
-
-        FACEBOOK: http://bit.ly/teststack-facebook​
-
-        TWITTER: https://twitter.com/TEST_STACK_CZ
-
-
-        #testing #testAutomation #livestream'
-      og_title: Bugy, fixy, hotfixy, Thu, May 20, 11:00 AM | Meetup
+      meta_description: 'Thu, May 20, 2021, 1:00 PM: Nový spolumoderátor a nový formát, přijďte na premiéru :)===========Nastavit odběr a připomenutíhttp://bit.ly/teststacksubDISCORD: https://bit.ly/tt-discordPATREON: https:/'
+      og_title: Bugy, fixy, hotfixy
       image: https://secure.meetupstatic.com/photos/event/4/b/f/c/600_496399452.jpeg
       url: https://www.meetup.com/ProfessionalTesting/events/278296129/
       ical:
@@ -197,28 +106,8 @@ series:
         dtstart: 2021-04-27 18:00:00+02:00
         dtend: 2021-04-27 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Po delší prázdninové pauze opět proběhne setkání nejen brněnských testerů.
-
-
-        Akce bude online, takže se může připojit do diskuze kdokoliv.
-
-        Pro spojení a diskuzi použijeme opět náš Discord server. (viz link)
-
-
-        Téma není určeno a bude vybráno podle preferencí účastníků.
-
-
-        Forma: Diskuze a praktické ukázky
-
-
-        Osnova
-
-        - Úvodní představení
-
-        - Výběr témat podle preferencí účastníků
-
-        - Diskuze nad tématy, případně praktické ukázky'
-      og_title: 'online: QA Brno - Volná témata, Wed, Sep 29, 4:00 PM | Meetup'
+      meta_description: 'Wed, Sep 29, 2021, 6:00 PM: Po delší prázdninové pauze opět proběhne setkání nejen brněnských testerů.Akce bude online, takže se může připojit do diskuze kdokoliv.Pro spojení a diskuzi použijeme opět '
+      og_title: 'online: QA Brno - Volná témata'
       image: https://secure.meetupstatic.com/photos/event/c/9/0/2/600_499131458.jpeg
       url: https://www.meetup.com/ProfessionalTesting/events/281067619/
       ical:
