--- a/data/sources/ibm-developer-prague.yaml
+++ b/data/sources/ibm-developer-prague.yaml
@@ -31,14 +31,8 @@ series:
         dtstart: 2021-09-07 16:00:00+02:00
         dtend: 2021-09-07 17:00:00+02:00
   - meetupcom:
-      meta_description: 'A central focus of Quarkus is developer joy and productivity. As part of this focus, Quarkus provides a powerful development mode which, among
-
-        other things, allows true hot compilation of code.
-
-
-        In this talk we will take a look at this feature in detail. Aside from allowing hot reloading locally, we can also configure our application to allow hot reloading remotely. For example, the application could be running in a docker container or
-        on a kubernetes-/openshift-cluster. This improves Dev/Prod-parity and thus enhances the development lifecycle.'
-      og_title: 'IBM and ConSol present: Remote development of Quarkus applications, Thu, Sep 16, 2:00 PM | Meetup'
+      meta_description: 'Thu, Sep 16, 2021, 4:00 PM: A central focus of Quarkus is developer joy and productivity. As part of this focus, Quarkus provides a powerful development mode which, amongother things, allows true hot '
+      og_title: 'IBM and ConSol present: Remote development of Quarkus applications'
       image: https://secure.meetupstatic.com/photos/event/d/1/1/d/600_498413533.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/280353117/
       ical:
@@ -62,11 +56,8 @@ series:
         dtstart: 2021-09-16 16:00:00+02:00
         dtend: 2021-09-16 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Utilizing messaging systems grants us the capability to decouple services from each other: downtime of a service consuming messages does not impact the functionality of the service sending messages and vice-versa.
-
-
-        In this talk we will discuss how to setup and use messaging systems. As practical examples, we use AMQP backed by ArtemisMQ, as well as kafka to send and receive messages, automatically as well as programmatically.'
-      og_title: Messaging with Quarkus, Thu, Sep 30, 2:00 PM | Meetup
+      meta_description: 'Thu, Sep 30, 2021, 4:00 PM: Utilizing messaging systems grants us the capability to decouple services from each other: downtime of a service consuming messages does not impact the functionality of the'
+      og_title: Messaging with Quarkus
       image: https://secure.meetupstatic.com/photos/event/d/1/3/3/600_498413555.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/280353088/
       ical:
@@ -115,30 +106,8 @@ series:
         dtstart: 2021-08-16 16:00:00+02:00
         dtend: 2021-08-16 17:00:00+02:00
   - meetupcom:
-      meta_description: 'IBM & TCS Present: Communicating between Applications
-
-        Intro to Enterprise Messaging & Event Streaming
-
-        Enterprise messaging technologies, such as IBM MQ, have provided asynchronous communication within and across applications for many years. Recently, event streaming technologies (such as Event Streams built on Apache Kafka ) have grown in popularity,
-        and they also provide asynchronous communication. Come join this exclusive webinar designed by IBM Developer and TCS to scrape the surface and truly understand why these technologies were created, and what use cases each technology is suitable
-        for. By the end of this webinar, we will dive into a workshop where developers will get a better understanding of enterprise messaging at a hands-on level.
-
-
-        In this webinar attendees will learn about:
-
-        1. Key concepts of Enterprise Messaging vs. Event Streaming
-
-        2. Tools and techniques to get started with messaging using IBM MQ
-
-        3. Real-world use cases and scenarios for both messaging and event streams
-
-
-        Speakers :
-
-        Pooja Mistry – IBM Developer Advocate
-
-        Santhosh Ramanathan – TCS Cloud Pak for Integration Consultant'
-      og_title: 'IBM & TCS Present: Communicating between Applications, Thu, Oct 14, 3:00 PM | Meetup'
+      meta_description: 'Thu, Oct 14, 2021, 5:00 PM: IBM & TCS Present: Communicating between ApplicationsIntro to Enterprise Messaging & Event StreamingEnterprise messaging technologies, such as IBM MQ, have provided asynchr'
+      og_title: 'IBM & TCS Present: Communicating between Applications'
       image: https://secure.meetupstatic.com/photos/event/4/c/e/6/600_499459686.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/280921328/
       ical:
@@ -162,63 +131,8 @@ series:
         dtstart: 2021-10-14 17:00:00+02:00
         dtend: 2021-10-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open source. Our Developer Festival and brings together developers
-        who want to tap into the collective power of open source, cloud and Artificial Intelligence.
-
-        Developer experts from IBM and beyond collaborate to show you how to get hands-on with open source and enterprise technologies.
-
-
-        Join us at this virtual, free event. Explore the variety of topics and innovations across three days, whether existing tech or ground-breaking fields: from Machine Learning to DevOps.
-
-        Here are some highlights not to miss: Quantum Computing and a Raspberry Pi?! Machine Learning; deploy a Chatbot to WhatsApp; Ethics and Artificial Intelligence.
-
-
-        Day 1: Monday 18th October - Open Source, Databases, AI & ML
-
-        12:00 - 13:00 Explore Quantum: Qiskit and RasQberry, Jan-Rainer Lahmann
-
-        13:00 - 14:00 How to Automate your Infrastructure Deployment, Pedro Luis Pérez, Guillermo López
-
-        14:00 - 15:00 Modernise your Machine Learning Workflow with Low Code Tools, Anam Mahmood, Mridul Bhandari
-
-        15:00 - 16:00 Quickly Integrate a Machine Learning Model in your Chatbot & Deploy to Whatsapp, Khalil Faraj & Fawaz Siddiqi
-
-        https://www.crowdcast.io/e/developer-festival
-
-
-        Day 2: Tuesday 19th October - Java, Ethics, and AI
-
-        12:00 - 13:00 Open Source in the world of Java, Grace Jansen and Jamie Coleman
-
-        13:00 - 14:00 Project Debater, Álvaro Corrales Cano and Yamini Rao
-
-        14:00 - 15:00 Building and Scoring Python Models, Olaf Depper
-
-        15:00 - 16:00 Ethics and Artificial Intelligence, Georges-Henri Moll
-
-        16:00 - 17:30 Build your first Machine Learning model and get started with Data Science, Felix Augenstein
-
-        https://www.crowdcast.io/e/developer-festival-2
-
-
-        Day 3: Wednesday 20th October - Cloud and OpenShift
-
-        12:00 - 13:00 Deploy a Microservices App to a Serverless Framework, Thomas Suedbroecker
-
-        13:00 - 14:30 OpenShift for Developers - Built-in DevOps Tools, Tim Schmidt, Viada
-
-        14:30 - 16:00 How to deploy applications on Red Hat OpenShift, Asna Javed, Masa Abushamleh
-
-        16:00 - 18:00 CI/CD for Kubernetes, Aco Vidovic
-
-        https://www.crowdcast.io/e/developer-festival-3
-
-
-        During the conference you can accelerate your Machine Learning, Artificial Intelligence, and Automation journey, with various applications and use-cases. Simplify and automate, turn your data into insights.
-
-        Learn how open source technologies like Kubernetes, frameworks like Tekton and ArgoCD, and platforms like Red Hat OpenShift combine to support your application modernization or cloud migration skills, through sessions on application development
-        and DevOps implementation.'
-      og_title: Developer Festival, Mon, Oct 18, 10:00 AM | Meetup
+      meta_description: 'Mon, Oct 18, 2021, 12:00 PM: Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open sou'
+      og_title: Developer Festival
       image: https://secure.meetupstatic.com/photos/event/b/2/d/1/600_499485777.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/281430037/
       ical:
